fix alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,15 @@ footer{
 #saturday-toggle{
   margin-left: 30px;
   margin-right: 30px;
+  background-color: #2f9989;
+}
+
+#sunday-toggle{
+  background-color: #2f9989;
+}
+
+#friday-toggle{
+  background-color: #15CBCE;
 }
 
 .upside-down {
@@ -167,6 +176,27 @@ footer{
 .faq-questions{
   display: flex;
   justify-content: center;
+}
+
+.splash-title{
+  margin-top: -60px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.splash-subtitle{
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-size: 25px;
+}
+
+.splash-button{
+  margin-left: 40%;
+  margin-right: 40%;
+  margin-top: 10px;
+  width: -webkit-fill-available;
 }
 
 li {
