--- a/css/style2.css
+++ b/css/style2.css
@@ -126,16 +126,8 @@
 
 }
 
-#section-team-bios{
-  background-color: #DEE7EA;
-}
-
 #section7-title{
   color: #f0c020
-}
-
-#section-sponsors{
-  background-color: #DEE7EA;
 }
 
 .text-large{
